--- a/workee/Dockerfile.armv7
+++ b/workee/Dockerfile.armv7
@@ -17,7 +17,7 @@ RUN apt install -y --no-install-recommends \
 RUN rustup target add armv7-unknown-linux-gnueabihf
 RUN rustup toolchain install stable-armv7-unknown-linux-gnueabihf
 RUN cargo install tauri-cli --git https://github.com/tauri-apps/tauri
-RUN curl -fsSL https://deb.nodesource.com/setup_17.x | sudo -E bash -
+RUN curl -fsSL "https://deb.nodesource.com/setup_17.x" | bash -
 RUN apt update -y
 RUN apt install nodejs -y
 WORKDIR /app
