--- a/workee/Dockerfile.armv7
+++ b/workee/Dockerfile.armv7
@@ -1,4 +1,36 @@
-FROM rust:latest
+# FROM rust:latest
+
+# RUN dpkg --add-architecture armhf
+# RUN apt update && apt upgrade -y
+# RUN apt install -y --no-install-recommends \
+#                    g++-arm-linux-gnueabihf \
+#                    libc6-dev-armhf-cross \
+#                    libssl-dev:armhf \
+#                    libwebkit2gtk-4.0-dev:armhf \
+#                    build-essential \
+#                    curl:armhf \
+#                    wget:armhf \
+#                    libgtk-3-dev:armhf \
+#                    patchelf:armhf \
+#                    librsvg2-dev:armhf \
+#                    pkg-config
+# RUN rustup target add armv7-unknown-linux-gnueabihf
+# RUN rustup toolchain install stable-armv7-unknown-linux-gnueabihf
+# RUN cargo install tauri-cli --git https://github.com/tauri-apps/tauri
+# RUN curl -fsSL "https://deb.nodesource.com/setup_17.x" | bash -
+# RUN apt update -y
+# RUN apt install nodejs -y
+# WORKDIR /app
+
+# ENV CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-linux-gnueabihf-gcc \
+#     CC_armv7_unknown_linux_gnueabihf=arm-linux-gnueabihf-gcc \
+#     CXX_armv7_unknown_linux_gnueabihf=arm-linux-gnueabihf-g++ \
+#     PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig \
+#     PKG_CONFIG_ALLOW_CROSS=1
+# WORKDIR /app/src-tauri
+# CMD ["cargo" ,"tauri",  "build", "--target", "armv7-unknown-linux-gnueabihf"]
+
+FROM debian:latest
 
 RUN dpkg --add-architecture armhf
 RUN apt update && apt upgrade -y
@@ -14,18 +46,3 @@ RUN apt install -y --no-install-recommends \
                    patchelf:armhf \
                    librsvg2-dev:armhf \
                    pkg-config
-RUN rustup target add armv7-unknown-linux-gnueabihf
-RUN rustup toolchain install stable-armv7-unknown-linux-gnueabihf
-RUN cargo install tauri-cli --git https://github.com/tauri-apps/tauri
-RUN curl -fsSL "https://deb.nodesource.com/setup_17.x" | bash -
-RUN apt update -y
-RUN apt install nodejs -y
-WORKDIR /app
-
-ENV CARGO_TARGET_ARMV7_UNKNOWN_LINUX_GNUEABIHF_LINKER=arm-linux-gnueabihf-gcc \
-    CC_armv7_unknown_linux_gnueabihf=arm-linux-gnueabihf-gcc \
-    CXX_armv7_unknown_linux_gnueabihf=arm-linux-gnueabihf-g++ \
-    PKG_CONFIG_PATH=/usr/lib/arm-linux-gnueabihf/pkgconfig \
-    PKG_CONFIG_ALLOW_CROSS=1
-WORKDIR /app/src-tauri
-CMD ["cargo" ,"tauri",  "build", "--target", "armv7-unknown-linux-gnueabihf"]
