--- a/workee/Dockerfile.armv7
+++ b/workee/Dockerfile.armv7
@@ -1,18 +1,18 @@
 FROM rust:latest
 
-RUN dpkg --add-architecture arm64
+RUN dpkg --add-architecture aarch64
 RUN apt update && apt upgrade -y
 RUN apt install -y --no-install-recommends \
                    g++-aarch64-linux-gnu \
-                   libc6-dev-arm64-cross \
-                   libssl-dev:arm64 \
-                   libwebkit2gtk-4.0-dev:arm64 \
+                   libc6-dev-aarch64-cross \
+                   libssl-dev:aarch64 \
+                   libwebkit2gtk-4.0-dev:aarch64 \
                    build-essential \
-                   curl:arm64 \
-                   wget:arm64 \
-                   libgtk-3-dev:arm64 \
-                   patchelf:arm64 \
-                   librsvg2-dev:arm64 \
+                   curl:aarch64 \
+                   wget:aarch64 \
+                   libgtk-3-dev:aarch64 \
+                   patchelf:aarch64 \
+                   librsvg2-dev:aarch64 \
                    pkg-config
 RUN rustup target add aarch64-unknown-linux-gnu
 RUN rustup toolchain install stable-aarch64-unknown-linux-gnu
