--- a/workee/src-tauri/Cargo.toml
+++ b/workee/src-tauri/Cargo.toml
@@ -16,6 +16,8 @@ tauri-build = { version = "1.0.0-rc.9", features = [] }
 
 [dependencies]
 serde_json = "1.0"
+log = "0.4.17"
+log4rs = "1.1.1"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
 
