--- a/workee/package.json
+++ b/workee/package.json
@@ -1,55 +1,72 @@
 {
-  "name": "workee",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.8.3",
-    "@tauri-apps/api": "^1.0.0-rc.5",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.1",
-    "@types/node": "^16.11.36",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "bootstrap": "^5.2.0-beta1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "init:armv7": "docker build . -t rust_cross_compile/armv7 -f Dockerfile.armv7",
-    "build:armv7": "react-scripts build && docker run --rm -ti -v `pwd`:/app rust_cross_compile/armv7",
-    "start": "cross-env BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "tauri": "tauri"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.0.0-rc.11",
-    "cross-env": "^7.0.3"
-  }
+    "name": "workee",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.8.3",
+        "@tauri-apps/api": "^1.0.0-rc.5",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.2.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.1",
+        "@types/node": "^16.11.36",
+        "@types/react": "^18.0.9",
+        "@types/react-dom": "^18.0.4",
+        "bootstrap": "^5.2.0-beta1",
+        "electron-is-dev": "^2.0.0",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.6.4",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
+        "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
+        "electron:start": "wait-on tcp:3000 && electron ."
+    },
+    "homepage": "./",
+    "main": "public/main.js",
+    "build": {
+        "extends": null,
+        "appId": "com.example.electron-cra",
+        "files": [
+            "dist/**/*",
+            "build/**/*",
+            "node_modules/**/*",
+            "package.json"
+        ],
+        "directories": {
+            "buildResources": "assets"
+        }
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            "last 1 electron version"
+        ],
+        "development": [
+            "last 1 electron version"
+        ]
+    },
+    "devDependencies": {
+        "@tauri-apps/cli": "^1.0.0-rc.11",
+        "concurrently": "^7.3.0",
+        "cross-env": "^7.0.3",
+        "electron": "^19.0.8",
+        "electron-builder": "^23.1.0",
+        "electronmon": "^2.0.2",
+        "wait-on": "^6.0.1"
+    }
 }
