--- a/workee/package.json
+++ b/workee/package.json
@@ -2,6 +2,7 @@
     "name": "workee",
     "version": "0.1.0",
     "private": true,
+    "author": "John Doe <john@doe.com>",
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.3",
         "@tauri-apps/api": "^1.0.0-rc.5",
@@ -28,7 +29,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
-        "electron:build": "npm run build && electron-builder -c.extraMetadata.main=build/main.js",
+        "electron:build": "npm run build && electron-builder build -c.extraMetadata.main=build/main.js --linux deb --armv7l",
         "electron:start": "wait-on tcp:3000 && electron ."
     },
     "homepage": "./",
