--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,8 @@ name: "build"
 on: [pull_request]
 
 jobs:
-  test-tauri:
-    strategy:
-      fail-fast: false
-      matrix:
-        platform: [ubuntu-latest]
-
-    runs-on: ${{ matrix.platform }}
+  build:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - name: setup node
