--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^18.0.4",
         "bootstrap": "^5.2.0-beta1",
         "electron-is-dev": "^2.0.0",
+        "log4js": "^6.6.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.2",
@@ -23,17 +24,19 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
+        "install": "electron-builder install-app-deps",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "electron:serve": "concurrently -k \"cross-env BROWSER=none npm start\" \"npm run electron:start\"",
-        "electron:build": "npm run build && electron-builder build -c.extraMetadata.main=build/main.js --linux deb --armv7l",
+        "electron:serve": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
+        "electron:build": "npm run build && electron-builder build -c.extraMetadata.main=build/electron/main.js --linux deb --armv7l",
+        "electron:buildOs": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js",
         "electron:start": "wait-on http://localhost:3000 && electron .",
         "electron:dev": "electron ."
     },
     "homepage": "./",
-    "main": "public/main.js",
+    "main": "build/electron/main.js",
     "build": {
         "extends": null,
         "appId": "com.example.electron-cra",
