--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "electron:serve": "concurrently \"cross-env BROWSER=none npm run start\" \"wait-on http://localhost:3000 && tsc -p electron -w\" \"wait-on http://localhost:3000 && tsc -p electron && electron .\"",
-        "electron:build": "npm run build && electron-builder build -c.extraMetadata.main=build/electron/main.js --linux deb --armv7l",
+        "electron:build": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js --linux deb --armv7l",
         "electron:buildOs": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js",
         "electron:start": "wait-on http://localhost:3000 && electron .",
         "electron:dev": "electron ."
