--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "es5",
       "module": "commonjs",
       "sourceMap": true,
-      "strict": true,
+      "strict": false,
       "outDir": "../build",
       "rootDir": "../",
       "noEmitOnError": true,
