--- a/package.json
+++ b/package.json
@@ -14,14 +14,25 @@
         "@types/react-dom": "^18.0.4",
         "bootstrap": "^5.2.0-beta1",
         "electron-is-dev": "^2.0.0",
-        "log4js": "^6.6.0",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "typescript": "^4.6.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "@typescript-eslint/eslint-plugin": "^5.27.1",
+        "@typescript-eslint/parser": "^5.27.1",
+        "eslint": "^8.17.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.2.2",
+        "eslint-plugin-promise": "^6.0.0",
+        "nodemon": "^2.0.16",
+        "ts-node": "^10.8.0",
+        "tsconfig-paths": "^4.0.0"
     },
     "scripts": {
         "install": "electron-builder install-app-deps",
@@ -33,7 +44,7 @@
         "electron:build": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js --linux deb --armv7l",
         "electron:buildOs": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js",
         "electron:start": "wait-on http://localhost:3000 && electron .",
-        "electron:dev": "electron ."
+        "electron:dev": "tsc -p electron && electron ."
     },
     "homepage": "./",
     "main": "build/electron/main.js",
@@ -70,6 +81,7 @@
         "electron": "^19.0.8",
         "electron-builder": "^23.1.0",
         "electronmon": "^2.0.2",
+        "log4js": "^6.5.2",
         "wait-on": "^6.0.1"
     }
 }
