--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "eslint-plugin-promise": "^6.0.0",
         "nodemon": "^2.0.16",
         "ts-node": "^10.8.0",
-        "tsconfig-paths": "^4.0.0"
+        "tsconfig-paths": "^4.0.0",
+        "log4js": "^6.5.2"
     },
     "scripts": {
         "install": "electron-builder install-app-deps",
@@ -81,7 +82,6 @@
         "electron": "^19.0.8",
         "electron-builder": "^23.1.0",
         "electronmon": "^2.0.2",
-        "log4js": "^6.5.2",
         "wait-on": "^6.0.1"
     }
 }
