--- a/package.json
+++ b/package.json
@@ -12,17 +12,11 @@
         "@types/node": "^16.11.36",
         "@types/react": "^18.0.9",
         "@types/react-dom": "^18.0.4",
-        "bootstrap": "^5.2.0-beta1",
-        "electron-is-dev": "^2.0.0",
-        "react": "^18.1.0",
-        "react-dom": "^18.1.0",
-        "react-redux": "^8.0.2",
-        "react-router-dom": "^6.3.0",
-        "react-scripts": "5.0.1",
-        "typescript": "^4.6.4",
-        "web-vitals": "^2.1.4",
         "@typescript-eslint/eslint-plugin": "^5.27.1",
         "@typescript-eslint/parser": "^5.27.1",
+        "bootstrap": "^5.2.0-beta1",
+        "electron-is-dev": "^2.0.0",
+        "electron-settings": "^4.0.2",
         "eslint": "^8.17.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-google": "^0.14.0",
@@ -30,10 +24,17 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.2.2",
         "eslint-plugin-promise": "^6.0.0",
+        "log4js": "^6.5.2",
         "nodemon": "^2.0.16",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
         "ts-node": "^10.8.0",
         "tsconfig-paths": "^4.0.0",
-        "log4js": "^6.5.2"
+        "typescript": "^4.6.4",
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "install": "electron-builder install-app-deps",
