--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,5 +16,7 @@ jobs:
         sudo apt-get install -y build-essential clang libdbus-1-dev libgtk-3-dev libnotify-dev libasound2-dev libcap-dev libcups2-dev libxtst-dev libxss1 libnss3-dev gcc-multilib g++-multilib curl gperf bison python3-dbusmock openjdk-8-jre
     - name: install dependencies
       run: npm install
+    - name: copy config.ts
+      run: cp electron/config.ts.template electron.config.ts
     - name: build application
       run: npm run electron:build
