--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-simple-keyboard": "^3.4.177",
         "ts-node": "^10.8.0",
         "tsconfig-paths": "^4.0.0",
         "typescript": "^4.6.4",
