--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dependencies": {
         "@emotion/react": "^11.10.0",
         "@emotion/styled": "^11.10.0",
+        "@mui/icons-material": "^5.8.4",
         "@mui/material": "^5.9.3",
+        "@mui/styled-engine-sc": "^5.9.3",
         "@reduxjs/toolkit": "^1.8.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.2.0",
@@ -27,14 +29,17 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.2.2",
         "eslint-plugin-promise": "^6.0.0",
+        "jquery": "^3.6.0",
         "log4js": "^6.5.2",
         "nodemon": "^2.0.16",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
+        "react-icons": "^4.4.0",
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "react-simple-keyboard": "^3.4.177",
+        "styled-components": "^5.3.5",
         "ts-node": "^10.8.0",
         "tsconfig-paths": "^4.0.0",
         "typescript": "^4.6.4",
@@ -82,6 +87,7 @@
         ]
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.14",
         "concurrently": "^7.3.0",
         "cross-env": "^7.0.3",
         "electron": "^19.0.8",
