--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
         "ts-node": "^10.8.0",
         "tsconfig-paths": "^4.0.0",
         "typescript": "^4.6.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "install": "electron-builder install-app-deps",
