--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-n": "^15.2.2",
         "eslint-plugin-promise": "^6.0.0",
+        "formik": "^2.2.9",
         "log4js": "^6.5.2",
         "nodemon": "^2.0.16",
         "react": "^18.1.0",
@@ -35,7 +36,8 @@
         "ts-node": "^10.8.0",
         "tsconfig-paths": "^4.0.0",
         "typescript": "^4.6.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "install": "electron-builder install-app-deps",
