--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react-dom": "^18.0.4",
         "@typescript-eslint/eslint-plugin": "^5.27.1",
         "@typescript-eslint/parser": "^5.27.1",
+        "axios": "^0.27.2",
         "bootstrap": "^5.2.0-beta1",
         "electron-is-dev": "^2.0.0",
         "electron-settings": "^4.0.2",
