#WOR-102 notication fonctionnel (manque plus que la page et on sera good :) )

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "react-simple-keyboard": "^3.4.177",
+        "react-toastify": "^9.0.8",
         "styled-components": "^5.3.5",
         "ts-node": "^10.8.0",
         "tsconfig-paths": "^4.0.0",
