--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "jquery": "^3.6.0",
         "log4js": "^6.5.2",
         "nodemon": "^2.0.16",
+        "python-shell": "^3.0.1",
         "react": "^18.1.0",
         "react-dom": "^18.1.0",
         "react-icons": "^4.4.0",
@@ -57,7 +58,7 @@
         "electron:build": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js --linux deb --armv7l",
         "electron:buildOs": "npm run build && tsc -p electron && electron-builder build -c.extraMetadata.main=build/electron/main.js",
         "electron:start": "wait-on http://localhost:3000 && electron .",
-        "electron:dev": "tsc -p electron && electron ."
+        "electron:dev": "tsc -p electron && cp electron/script build/electron/ -r  && electron ."
     },
     "homepage": "./",
     "main": "build/electron/main.js",
