--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@typescript-eslint/parser": "^5.27.1",
         "axios": "^0.27.2",
         "bootstrap": "^5.2.0-beta1",
+        "date-fns": "^2.29.3",
         "electron-is-dev": "^2.0.0",
         "electron-settings": "^4.0.2",
         "eslint": "^8.17.0",
