--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 16
+    - name: copy config
+      run: echo $REACT | src/Config.ts
     - name: install dependencies (ubuntu only)
       run: |
         sudo apt-get update
