--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,9 @@ jobs:
       with:
         node-version: 16
     - name: copy config
-      env: 
-        WHO_TO_TRUST: ${{ secrets.REACT }}
-      run: echo $WHO_TO_TRUST
+      run: | 
+        echo ${{ secrets.REACT }} > src/Config.ts
+        cat src/Config.ts
     - name: install dependencies (ubuntu only)
       run: |
         sudo apt-get update
