--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
     - name: copy config.ts
       env: 
-        WHO_TO_TRUST1: '${{ secrets.REACT }}'
+        WHO_TO_TRUST1: '${{ secrets.ELECTRON }}'
       run: 'echo "$WHO_TO_TRUST1" > electron/config.ts'
     - name: build application
       run: npm run electron:build
