--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -32,7 +32,7 @@ jobs:
           exit 1
         fi
     - name: Create tag
-      uses: actions/create-tag@v2
+      uses: actions/create-release@v1
       with:
         tag_name: ${{ steps.get_branch.outputs.semantic_version }}
     - name: Push tags
