--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Extract semantic version from branch name
       run: |
         echo "version=${{ steps.get_branch.outputs.branch_name }} | grep -oP version-(\d+\.\d+\.\d+" >> $GITHUB_ENV
-        echo env.version
+        echo "${{ env.version }}"
     - name: Create tag
       uses: actions/create-release@v1
       with:
