--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -16,15 +16,17 @@ jobs:
       run: | 
         echo ::set-output name=branch_name::$(echo ${GITHUB_REF#refs/heads/})
     - name: Extract semantic version from branch name
+      id: extract_version
       run: |
-        echo "version=$( ${{steps.get_branch.outputs.branch_name }} | grep -oP version-(\d+\.\d+\.\d+)"
-        echo "${version}"
+        version=$(echo "${{steps.get_branch.outputs.branch_name}}" | grep -oP "(\d+\.\d+\.\d+)")
+        echo ::set-output name=version::$version
+    - name: Check if branch name matches version
+      if: ! $version
+      run: echo "Branch name does not match version format."
+        exit 1
     - name: Create tag
       uses: actions/create-release@v1
       with:
-        tag_name: "${version}"
+        tag_name: "${{steps.extract_version.outputs.version}}"
     - name: Push tags
-      run: git "push origin ${version}"
-    - name: Success message
-      if: success()
-      run: echo "Successfully created new tag version ${version}"
+      run: git push -u origin "${{steps.extract_version.outputs.version}}"
