--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -21,9 +21,7 @@ jobs:
         version=$(echo "${{steps.get_branch.outputs.branch_name}}" | grep -oP "(\d+\.\d+\.\d+)")
         echo ::set-output name=version::$version
     - name: Create tag
-      uses: actions/create-release@v1
-      with:
-        tag_name: "${{steps.extract_version.outputs.version}}"
+      run: git tag "${version}"
     - name: Push tags
       run: git push -u origin "${{steps.extract_version.outputs.version}}"
 
