--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -21,7 +21,9 @@ jobs:
         version=$(echo "${{steps.get_branch.outputs.branch_name}}" | grep -oP "(\d+\.\d+\.\d+)")
         echo ::set-output name=version::$version
     - name: Create tag
-      run: git tag "${version}"
+      run: |
+        echo "${version}"
+        git tag ${version}
     - name: Push tags
       run: git push -u origin "${{steps.extract_version.outputs.version}}"
 
