--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -25,5 +25,5 @@ jobs:
         echo "${version}"
         git tag ${version}
     - name: Push tags
-      run: git push -u origin "${{steps.extract_version.outputs.version}}"
+      run: git push -u origin --tags
 
