--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -24,6 +24,8 @@ jobs:
       run: |
         echo "${version}"
         git tag ${version}
+        echo ::git tag
+        
     - name: Push tags
       run: git push -u origin --tags
 
