--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         echo "${version}"
         git tag ${version}
-        echo ::git tag
+        git tag
         
     - name: Push tags
       run: git push -u origin --tags
