--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -22,10 +22,8 @@ jobs:
         echo ::set-output name=version::$version
     - name: Create tag
       run: |
-        echo "${version}"
         git tag ${version}
-        git tag
-        
+        git tag -l
     - name: Push tags
       run: git push -u origin --tags
 
