--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -22,8 +22,9 @@ jobs:
         echo ::set-output name=version::$version
     - name: Create tag
       run: |
-        git tag ${version}
+        git tag $version
         git tag -l
+        hub release create -a -m $version $version
     - name: Push tags
       run: git push -u origin --tags
 
