--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -27,7 +27,7 @@ jobs:
         #!/bin/bash
         git tag $version
         git tag -l
-        GITHUB_TOKEN hub release $version 
+        GITHUB_TOKEN=$GITHUB_TOKEN hub release $version 
     - name: Push tags
       run: git push -u origin --tags
 
