--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -14,9 +14,9 @@ jobs:
     - name: Get current branch name
       id: get_branch
       run: | 
-        echo ::set-output name=branch_name::$(echo ${GITHUB_REF#refs/heads/})
-        branchName=$( echo ${ github.head_ref || github.ref_name })
-        echo "$branchName"
+        #!/bin/bash
+        echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
+        echo ${{ env.BRANCH_NAME }}
     - name: Extract semantic version from branch name
       id: extract_version
       run: |
