--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,13 +13,14 @@ jobs:
         node-version: 16
     - name: Get current branch name
       id: get_branch
+      shell: bash
       run: | 
-        #!/bin/bash
         echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
-        echo ${{ env.BRANCH_NAME }}
+        
     - name: Extract semantic version from branch name
       id: extract_version
       run: |
+        echo ${{ env.BRANCH_NAME }}
         version=$(echo "${{steps.get_branch.outputs.branch_name}}" | grep -oP "(\d+\.\d+\.\d+)")
         echo ::set-output name=version::$version
     - name: Create tag
