--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -15,14 +15,13 @@ jobs:
       id: get_branch
       shell: bash
       run: | 
-        echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
-        
+        echo "BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV    
     - name: Extract semantic version from branch name
       id: extract_version
       run: |
         echo ${{ env.BRANCH_NAME }}
-        version=$(echo "${{steps.get_branch.outputs.branch_name}}" | grep -oP "(\d+\.\d+\.\d+)")
-        echo ::set-output name=version::$version
+        version=$(echo "${{env.BRANCH_NAME}}" | grep -oP "(\d+\.\d+\.\d+)") >> $GITHUB_ENV
+        echo ${{env.version}}
     - name: Create tag
       env:
         GITHUB_TOKEN: ${{ secrets.SECRET_TOKEN }}
