--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -15,8 +15,11 @@ jobs:
         run: |
           branch_name=${GITHUB_REF#refs/heads/}
           ticket_number=${branch_name%%-*}
+          echo "$ticket_number"
           branch_type=${branch_name#*-}
+          echo "$branch-type"
           branch_type=${branch_type%%-*}
+          echo "$branch_type"
 
       - name: Increment version
         id: version
