--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -2,7 +2,7 @@ name: Versionning
 on:
   push
 env:
-  TAG_PREFIX: "v"
+  TAG_PREFIX: "version"
 
 jobs:
   version:
@@ -10,16 +10,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Extract branch information
-        run: |
-          branch_name=${GITHUB_REF#refs/heads/}
-          ticket_number=${branch_name%%-*}
-          echo "$ticket_number"
-          branch_type=${branch_name#*-}
-          echo "$branch-type"
-          branch_type=${branch_type%%-*}
-          echo "$branch_type"
 
       - name: Increment version
         id: version
