--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Extract branch information
         run: |
             git_tag=$(git tag -l)
-            echo "tag actuel ${git_tag}""
+            echo "tag actuel ${git_tag}"
             branch_name=${GITHUB_REF#refs/heads/}
             ticket_number=${branch_name%%-*}
             branch_type=${branch_name#*-}
