update de l'extract

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Extract branch information
         run: |
           branch_name=${GITHUB_REF#refs/heads/}
+          echo "${branch_name}"
           branch_type=$(echo "$branch_name" | sed 's/^[^-]*-//;s/-.*$//')
           echo "${branch_type}"
 
