--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -10,6 +10,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        
+        
+      - name: Configure Git identity
+        run: |
+          git config --global user.email "${{ env.GITHUB_ACTOR }}@users.noreply.github.com"
+          git config --global user.name "${{ env.GITHUB_ACTOR }}"
+          
       - name: Extract branch information
         run: |
           branch_name=${GITHUB_REF#refs/heads/}
@@ -17,13 +24,6 @@ jobs:
           branch_type=$(echo "$branch_name" | grep -Eo '(feature|hotfix|bugfix)')
           echo "branch_type=${branch_type}" >> $GITHUB_ENV
           
-      - name: Configure Git identity
-        uses: actions/github-script@0.5.0
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            git config --global user.email "action@github.com"
-            git config --global user.name "GitHub Action"
       - name: Increment version
         id: version
         run: |
